new proj/src/objects/GE_ES_PostMortem__c.object
<CustomObject>
    <description>Post Mortem begins when the opportunity is dispositioned as Closed Won or Closed Loss. It has information related to the closure of an Opportunity.</description>
    <fields>
        <fullName>GE_EM_Bid_Oppty__c</fullName>
        <label>Why did the customer bid the opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_EM_Feedback__c</fullName>
        <label>Customer Feedback Source Function</label>
        <picklist>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement/Sourcing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None of the Above</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_EM_Lost_Bid__c</fullName>
        <label>If lost,how could GE have won this bid?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_EM_Org_Negotn__c</fullName>
        <label>Customer’s procurement org&apos;s negotiation</label>
        <picklist>
            <picklistValues>
                <fullName>BAFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-bid/Reverse Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None of the Above</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_EM_Primary__c</fullName>
        <label>What is the primary segment?</label>
        <picklist>
            <picklistValues>
                <fullName>Data Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metals &amp; Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart Grid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None of the Above</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_EM_Source_Lvl__c</fullName>
        <label>Customer Feedback Source Level</label>
        <picklist>
            <picklistValues>
                <fullName>VP or Above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None of the Above</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_EM_Win_Bid__c</fullName>
        <label>Customer valued most in winning bidder</label>
        <picklist>
            <picklistValues>
                <fullName>Cycle time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product offering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service capability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total cost of ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terms &amp; Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None of the Above</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_Ab_Com__c</fullName>
        <label>Technical ability Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_AddnCom__c</fullName>
        <label>Additional Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_Bid__c</fullName>
        <label>As-Bid Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_COMPASS__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+  GE_ES_PGS_Opty__r.Id,  GE_ES_PGS_Opty__r.GE_ES_Opportunity_Number__c , &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COMPASS ID #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_Comp_Cm__c</fullName>
        <label>Additional Competitor Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_Cust__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+  GE_ES_PGS_Opty__r.AccountId, GE_ES_PGS_Opty__r.Account.Name, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name of Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_Cycle__c</fullName>
        <label>Cycle time Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_Imp__c</fullName>
        <label>Did GE&apos;s cycle time impact decision?</label>
        <picklist>
            <picklistValues>
                <fullName>Longer Cycle Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal Cycle Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shorter Cycle Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_LeadPnL__c</fullName>
        <formula>GE_ES_PGS_Opty__r.Lead_PL__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead P&amp;L</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_Margin__c</fullName>
        <label>As-Bid Contribution Margin (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_Mc_Sr__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; +  GE_ES_PGS_Opty__r.GE_ES_Installed_Base__r.Id ,  GE_ES_PGS_Opty__r.GE_ES_Installed_Base__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Machine Serial #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_Opty__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Post Mortem</relationshipLabel>
        <relationshipName>Post_Mortem</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_Out_Com__c</fullName>
        <label>Outage Type Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_Out_Typ__c</fullName>
        <formula>TEXT( GE_ES_PGS_Opty__r.GE_ES_OutageType__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outage Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_P_Com__c</fullName>
        <label>GE Price Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_Past__c</fullName>
        <label>Past performance Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_Price__c</fullName>
        <label>GE Price %  High/Low</label>
        <picklist>
            <picklistValues>
                <fullName>GE more than 50% less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE 50% less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE 40% less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE 30% less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE 20% less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE 10% less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor 10% less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor 20% less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor 30% less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor 40% less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor 50% less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor more than 50% less</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_Recom__c</fullName>
        <label>Recommendations for leadership?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_Region__c</fullName>
        <formula>GE_ES_PGS_Opty__r.Sales_Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_Res__c</fullName>
        <label>Did GE resource capacity impact decision</label>
        <picklist>
            <picklistValues>
                <fullName>Sufficient Resources and Capacity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Resources or Capacity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_Resp__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+   CreatedById, CreatedBy.FirstName  &amp;  &quot; &quot; &amp; CreatedBy.LastName, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name of Respondent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_Rsn_Com__c</fullName>
        <label>Other impact reasons Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_Sc_Com__c</fullName>
        <label>Scope Comparison Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_Scope__c</fullName>
        <label>Scope Comparison</label>
        <picklist>
            <picklistValues>
                <fullName>More Scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identical Scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less Scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_Shoploc__c</fullName>
        <label>Shop location Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_Status__c</fullName>
        <formula>TEXT( GE_ES_PGS_Opty__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_Stratgy__c</fullName>
        <label>What was GE&apos;s bidding strategy?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_adv__c</fullName>
        <label>What were competitor&apos;s advantages?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_bid_Com__c</fullName>
        <label>Winning bidder Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_cap__c</fullName>
        <label>GE resource capacity Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_comp__c</fullName>
        <label>What other competitors were involved?</label>
        <picklist>
            <picklistValues>
                <fullName>ABB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcatel-Lucent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alstom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Areva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autodesk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baldor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beckwith Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CalAmp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cotter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dresser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynamic Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eaton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elliott Turbo Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emerson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HICO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated Power Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intergraph</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interpro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Itron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Koeffler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landis &amp; Gyr</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_disadv__c</fullName>
        <label>What were competitor&apos;s disadvantages?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_impact__c</fullName>
        <label>Did past perfomance impact decision?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes, GE Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes, GE Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes, Competitor Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes, Competitor Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_reason__c</fullName>
        <label>Other reasons that impacted decision</label>
        <picklist>
            <picklistValues>
                <fullName>GE&apos;s Terms and Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE&apos;s Responsiveness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Please list below)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_shop__c</fullName>
        <label>Did shop location impact decision?</label>
        <picklist>
            <picklistValues>
                <fullName>Positive Impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative Impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_tech__c</fullName>
        <label>Did GE technical ability impact decision</label>
        <picklist>
            <picklistValues>
                <fullName>More Capable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equally Capable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less Capable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_trends__c</fullName>
        <label>Any additional market trends?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_PGS_win_bid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Who was the winning bidder?</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Post Mortem</relationshipLabel>
        <relationshipName>Post_Mortem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Post Mortem</label>
    <nameField>
        <displayFormat>PM - {00000}</displayFormat>
        <label>Post Mortem Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post Mortem</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>